unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Chief_Executive_Officer_Full_Name__c</fullName>
        <label>Chief Executive Officer - Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chief_Executive_Officer_Prefix__c</fullName>
        <label>Chief Executive Officer - Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chief_Executive_Officer_Title__c</fullName>
        <label>Chief Executive Officer - Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Access_Code__c</fullName>
        <label>Country Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <externalId>true</externalId>
        <label>DUNS Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>D_B_Continent_Code__c</fullName>
        <label>D&amp;B Continent Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_Business_Name__c</fullName>
        <label>Domestic Ultimate Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_DUNS_Number__c</fullName>
        <label>Domestic Ultimate DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_D_B_Country_Code__c</fullName>
        <label>Domestic Ultimate D&amp;B  Country Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_FIPS_Country_Code__c</fullName>
        <label>Domestic Ultimate FIPS  Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_State_Province_Abbrevi__c</fullName>
        <label>Domestic Ultimate State/Province Abbrevi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_Here_Reliability_Code__c</fullName>
        <label>Employees Here Reliability Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_Here__c</fullName>
        <label>Employees Here</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_Total_Reliability_Code__c</fullName>
        <label>Employees Total Reliability Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facsimile_Number__c</fullName>
        <label>Facsimile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Parent_Id__c</fullName>
        <formula>IF(
ISBLANK(ParentId), Id, if(ISBLANK(Parent.ParentId), Parent.Id,  Parent.ParentId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Business_Name__c</fullName>
        <label>Global Ultimate Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS_Number__c</fullName>
        <label>Global Ultimate DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_D_B_Country_Code__c</fullName>
        <label>Global Ultimate D&amp;B Country Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_FIPS_Country_Code__c</fullName>
        <label>Global Ultimate FIPS Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Indicator__c</fullName>
        <label>Global Ultimate Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_State_Province_Abbreviat__c</fullName>
        <label>Global Ultimate State/Province Abbreviat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarter_DUNS_Number__c</fullName>
        <label>Headquarter DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Code__c</fullName>
        <label>Hierarchy Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <inlineHelpText>Source: Moldev (Industry), SCIEX (Industry), IDBS (Industry), Leica (Industry,Department,Sub Department,Division) &amp; Beckman (Industry)</inlineHelpText>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biosecurity</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Contract Research Organizations</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Term_1__c</fullName>
        <label>Key Term 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Term_2__c</fullName>
        <label>Key Term 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Term_3__c</fullName>
        <label>Key Term 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City_Name__c</fullName>
        <label>Mailing City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province_Abbreviation__c</fullName>
        <label>Mailing State/Province Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Industry_Category__c</fullName>
        <label>Major Industry Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <inlineHelpText>Source: Moldev (Industry), SCIEX (Institution Type), IDBS (None), Leica (Market Segment, Business Division) &amp; Beckman (Key Account, Special Designation)</inlineHelpText>
        <label>Market Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Non-Life Science Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Childs__c</fullName>
        <label>Number of Childs</label>
        <summaryForeignKey>OpCo_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Family_Members__c</fullName>
        <label>Number of Family Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo_Contact_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpCo Contact Data</label>
        <referenceTo>OpCo_Additional_Comment__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_DUNS_Number__c</fullName>
        <label>Parent DUNS Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Headquarter_Business_Name__c</fullName>
        <label>Parent/Headquarter Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Headquarter_D_B_Country_Code__c</fullName>
        <label>Parent/Headquarter D&amp;B Country Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Headquarter_FIPS_Country_Code__c</fullName>
        <label>Parent/Headquarter FIPS Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Headquarter_State_Province_Abbrev__c</fullName>
        <label>Parent/Headquarter State/Province Abbrev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_Local_Currency__c</fullName>
        <label>Sales Volume (Local Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_US_Dollars__c</fullName>
        <label>Sales Volume (US Dollars)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Keys__c</fullName>
        <label>Search Keys</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Status__c</fullName>
        <label>Site Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_Abbreviation__c</fullName>
        <label>State/Province Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Indicator__c</fullName>
        <label>Subsidiary Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Childs__c</fullName>
        <formula>Number_of_Childs__c + Parent.Number_of_Childs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Childs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_OpCo_Accounts__c</fullName>
        <label>Total OpCo Accounts</label>
        <summaryForeignKey>OpCo_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Opportunities__c</fullName>
        <label>Total Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tradestyle_Name__c</fullName>
        <label>Tradestyle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Source: Moldev (Type), SCIEX (Type, Location Type, Customer Account Type), IDBS (Type), Leica (Corporate Account Type, Special Account Type, Account Type) &amp; Beckman (Type)</inlineHelpText>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global HQ</fullName>
                    <label>MOL - Global HQ</label>
                </value>
                <value>
                    <fullName>Main HQ</fullName>
                    <label>MOL - Main HQ</label>
                </value>
                <value>
                    <fullName>International HQ</fullName>
                    <label>MOL - International HQ</label>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                    <label>MOL - Subsidiary</label>
                </value>
                <value>
                    <fullName>MOL - Branch</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                    <label>MOL - University</label>
                </value>
                <value>
                    <fullName>US HQ</fullName>
                    <label>MOL - US HQ</label>
                </value>
                <value>
                    <fullName>Canada HQ</fullName>
                    <label>MOL - Canada HQ</label>
                </value>
                <value>
                    <fullName>UK HQ</fullName>
                    <label>MOL - UK HQ</label>
                </value>
                <value>
                    <fullName>France HQ</fullName>
                    <label>MOL - France HQ</label>
                </value>
                <value>
                    <fullName>Germany HQ</fullName>
                    <label>MOL - Germany HQ</label>
                </value>
                <value>
                    <fullName>Spain HQ</fullName>
                    <label>MOL - Spain HQ</label>
                </value>
                <value>
                    <fullName>Netherlands HQ</fullName>
                    <label>MOL - Netherlands HQ</label>
                </value>
                <value>
                    <fullName>Switzerland HQ</fullName>
                    <label>MOL - Switzerland HQ</label>
                </value>
                <value>
                    <fullName>Sweden HQ</fullName>
                    <label>MOL - Sweden HQ</label>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                    <label>MOL - Distributor</label>
                </value>
                <value>
                    <fullName>MOL - Single Location</fullName>
                </value>
                <value>
                    <fullName>MOL - Italy HQ</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                    <label>MOL - Agent</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                    <label>MOL - Reseller</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>MOL - Other</label>
                </value>
                <value>
                    <fullName>IDB - Competitor</fullName>
                </value>
                <value>
                    <fullName>IDB - Customer</fullName>
                </value>
                <value>
                    <fullName>IDB - Partner</fullName>
                </value>
                <value>
                    <fullName>IDB - Prospect</fullName>
                </value>
                <value>
                    <fullName>IDB - Reseller</fullName>
                </value>
                <value>
                    <fullName>IDB - Other</fullName>
                </value>
                <value>
                    <fullName>IDB - Site Closed</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                    <label>IDB - Lead</label>
                </value>
                <value>
                    <fullName>Delete</fullName>
                    <label>IDB - Delete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_Year_Base_Sales_Amount__c</fullName>
        <label>3 Year Base Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Year_Growth_Percentage_on_Sales_Volum__c</fullName>
        <label>3 Year Growth Percentage on Sales Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5_Year_Base_Sales_Amount__c</fullName>
        <label>5 Year Base Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Year_Growth_Percentage_on_Sales_Volum__c</fullName>
        <label>5 Year Growth Percentage on Sales Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Search_Keys__c</columns>
        <columns>Is_Key_Account__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Key_Accounts_Child_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Key Accounts - Sites</label>
    </listViews>
    <listViews>
        <fullName>All_Key_Accounts_Only</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>Is_Key_Account__c</columns>
        <columns>Search_Keys__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Key_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Key Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_NOT_TO_USE_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Total_OpCo_Accounts__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>DO NOT USE</value>
        </filters>
        <label>All DO NOT USE Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Parent_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>Is_Key_Account__c</columns>
        <columns>Search_Keys__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>All Parent Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_XUNMATCHED_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Total_OpCo_Accounts__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>XUNMATCHED</value>
        </filters>
        <label>All XUNMATCHED Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Is_Key_Account__c</columns>
        <columns>Search_Keys__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Total_OpCo_Accounts__c</columns>
        <columns>Total_Opportunities__c</columns>
        <columns>Hierarchy_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>XUNMATCHED_Child_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Total_OpCo_Accounts__c</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>XUNMATCHED</value>
        </filters>
        <label>XUNMATCHED Child Accounts</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Keywords_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(CONTAINS(Search_Keys__c, &apos;,,&apos;),true,false)</errorConditionFormula>
        <errorDisplayField>Search_Keys__c</errorDisplayField>
        <errorMessage>Search Key Terms should not have any operators except comma (,) &amp; also no two consecutive commas (,,)</errorMessage>
    </validationRules>
</CustomObject>